Removed app->hardware r/g/b/brightness level remapping because most phones and LED strips only support 8-bit color
